sRGB transition is invalid when context is ES.

BUG=610307

Review-Url: https://codereview.chromium.org/1959323002
Cr-Commit-Position: refs/heads/master@{#392678}

Former-commit-id: bd71f407455958fabd9f1540a548958dc1ae413b